--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link
@@ -22,21 +17,58 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Title</title>
+    <script src="https://kit.fontawesome.com/yourcode.js"></script>
   </head>
   <body>
     <header>
       <nav>
-        <div class="logo"><img src="" alt="" class="logo" /></div>
-        <div class="navbar">
-          <ul class="nav">
-            <li class="nav-items"><a href="" class="nav-link"></a></li>
-            <li class="nav-items"><a href="" class="nav-link"></a></li>
-            <li class="nav-items"><a href="" class="nav-link"></a></li>
-            <li class="nav-items"><a href="" class="nav-link"></a></li>
-            <li class="nav-items"><a href="" class="nav-link"></a></li>
+        <div class="container">
+          <div class="logo">
+            <img src="./images/logo.png" alt="" />
+          </div>
+          <ul class="navbarr">
+            <li><a href="#">HOME</a></li>
+            <li>
+              <a href="#">ABOUT</a>
+            </li>
+            <li>
+              <a href="#">FEATURE</a>
+            </li>
+            <li>
+              <a href="#">SERVICE</a>
+            </li>
+            <li>
+              <a href="#">CONTACT</a>
+            </li>
           </ul>
         </div>
       </nav>
+      <section class="banner">
+        <div class="leaf"><img src="./images/leaf.png" alt="" /></div>
+        <div class="center">
+          <h5 class="margin50">SPA & BEAUTI CENTER</h5>
+          <h1 class="margin50" class="margin15">
+            Beauty and success<br />
+            start here.
+          </h1>
+          <p class="margin50">
+            Together creeping heaven upon third dominion be upon won't darknes
+            rule
+            <br />
+            behould it created good saw after she'd Our set living.
+          </p>
+          <div class="click--video margin50">
+            <button href="#">
+              <p>RESERVE NOW</p>
+            </button>
+            <div class="watch">
+              <button class="play"><i class="fas fa-play"></i></button>
+              <p>Watch out story</p>
+            </div>
+          </div>
+        </div>
+        <div class="spa"><img src="./images/spa.png" alt="" /></div>
+      </section>
     </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
